--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
     "version": "0.0.1",
     "description": "FilMarket Bot",
     "scripts": {
-      "start": "env-cmd node index.js"
+        "start": "env-cmd node index.js",
+        "test-miners": "env-cmd node miners-client-test.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/CrossChainLabs/filmarket-bot.git"
+        "type": "git",
+        "url": "git+https://github.com/CrossChainLabs/filmarket-bot.git"
     },
     "author": "CrossChain Labs",
     "license": "MIT",
     "bugs": {
-      "url": "https://github.com/CrossChainLabs/filmarket-bot/issues"
+        "url": "https://github.com/CrossChainLabs/filmarket-bot/issues"
     },
     "homepage": "https://github.com/CrossChainLabs/filmarket-bot#readme",
     "dependencies": {
-      "axios": "^0.24.0",
-      "env-cmd": "^10.1.0",
-      "time-stamp": "^2.2.0"
+        "@maxmind/geoip2-node": "^3.4.0",
+        "axios": "^0.24.0",
+        "axios-rate-limit": "^1.3.0",
+        "coinmarketcap-api": "^3.1.1",
+        "env-cmd": "^10.1.0",
+        "time-stamp": "^2.2.0"
     }
-  }
+}
