--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@maxmind/geoip2-node": "^3.4.0",
         "axios": "^0.24.0",
         "axios-rate-limit": "^1.3.0",
+        "bignumber.js": "^9.0.2",
         "coinmarketcap-api": "^3.1.1",
         "env-cmd": "^10.1.0",
         "time-stamp": "^2.2.0"
