--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 LOTUS_API=
 MINERS_API_FG=
 MINERS_API_RS=
-MAXMIND_ID=
-MAXMIND_TOKEN=
 COINMARKETCAP_APIKEY=
+ACCOUNT_ID=
+ACCOUNT_KEY=
+CONTRACT_NAME=
