--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "FilMarket Bot",
     "scripts": {
         "start": "env-cmd node index.js",
+        "api": "env-cmd node api.js",
         "update-sp-list": "env-cmd node update-sp-list.js",
         "test-miners": "env-cmd node miners-client-test.js",
         "test-near": "env-cmd node near-test.js"
@@ -19,13 +20,14 @@
     },
     "homepage": "https://github.com/CrossChainLabs/filmarket-bot#readme",
     "dependencies": {
-        "@maxmind/geoip2-node": "^3.4.0",
+        "@maxmind/geoip2-node": "^3.5.0",
         "axios": "^0.24.0",
         "axios-rate-limit": "^1.3.0",
         "big.js": "^6.1.1",
         "bignumber.js": "^9.0.2",
         "coinmarketcap-api": "^3.1.1",
         "env-cmd": "^10.1.0",
+        "express": "^4.18.2",
         "near-api-js": "^0.44.2",
         "time-stamp": "^2.2.0"
     }
